--- a/starter/package.json
+++ b/starter/package.json
@@ -12,7 +12,8 @@
   "description": "",
   "devDependencies": {
     "webpack": "^5.61.0",
-    "webpack-cli": "^4.9.1"
+    "webpack-cli": "^4.9.1",
+    "install-webpack-plugin":"", "css-loader":"^6.5.0", "mini-css-extract-plugin":"^2.4.3", "banner-plugin":"^1.0.10":
   },
   "dependencies": {}
 }
